# ssg-linux-acct-gen

./: Makefile  README.md  pyproject.toml
cmsc408-fa2024/: semester-project-groups.csv
cmsc408-fa2024/skel/: .bash_aliases
src/: _main.py  file_utils.py  logging.py  utils.py
tests/: test_create_user_account.py  test_delete_user_account.py  test_integration_user_account.py
