[tool.poetry]
name = "ssg-linux-acct-gen"
version = "0.1.0"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"
packages = [{include="./src"}]


[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clag = "src._main:cli"