[tool.poetry]
name = "ssg-linux-acct-gen"
version = "0.2.0"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"
packages = [{include="./src"}]


[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
plotly = "^5.24.0"
click = "^8.1.7"
loguru = "^0.7.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clag = "src._main:cli"